--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </head>
     <body>
         <div class="container">
+            <!-- formulário -->
+
             <div class="form">
                 <h3>Confira o clima de uma cidade:</h3>
                 <div class="form-input-container">
@@ -29,31 +31,37 @@
                     </button>
                 </div>
             </div>
-            <div id="weather-data">
+
+            <!-- informações do clima -->
+
+            <div id="weather-data" class="hide">
+                <!-- local -->
                 <h2>
                     <i class="fa-solid fa-location dot"></i>
-                    <span id="city">Brasília</span>
+                    <span id="city"></span>
                     <img src="" id="country" alt="Bandeira do país" />
                 </h2>
 
-                <p id="temperatura"><span>38</span>&deg;C</p>
+                <!-- temperatura -->
+                <p id="temperature"><span></span>&deg;C</p>
 
                 <div id="description-container">
-                    <p id="description">Nublado</p>
+                    <!-- condição -->
+                    <p id="description"></p>
                     <img src="" alt="Condições do tempo" id="weather-icon" />
                 </div>
 
                 <div id="details-container">
+                    <!-- umidade -->
                     <p id="umidity">
                         <i class="fa-solid fa-droplet"></i>
-                        <span>50%</span>
+                        <span></span>
                     </p>
-                </div>
 
-                <div id="wind">
-                    <p id="umidity">
+                    <!-- vento -->
+                    <p id="wind">
                         <i class="fa-solid fa-wind"></i>
-                        <span>3km/h</span>
+                        <span></span>
                     </p>
                 </div>
             </div>
