--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Previsão do Tempo</title>
         <link rel="stylesheet" href="./style.css" />
+        <link rel="icon" href="./Media/icon.png" />
         <script src="./script.js" defer></script>
 
         <!-- Google API -->
